# gattrs

./: Cargo.toml  LICENSE  README.md
example/counter/: Cargo.toml
example/counter/src/: main.rs
src/: lib.rs
src/adv/: le_advertisement.rs  le_advertising_manager.rs  mod.rs
src/gatt/: characteristic_register.rs  gatt_app.rs  gatt_manager.rs  mod.rs  service_register.rs
src/types/: mod.rs  result.rs
